refactor: upgrade to java 17